2017-09-25  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/comm.c (send_plugins_preferences): Add function documentation.

2017-09-24  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/comm.c (send_plugin_preferences): New function.
	(comm_send_preferences): Call new function.

	* src/nasl_plugins.c (prefs_add_nvti, nvtpref_free_helper): Remove
	functions.
	(nasl_plugin_add): Don't add plugin preferences in memory.

	* misc/plugutils.c (get_plugin_preference): When no value is found in
	memory preferences, use the default one from nvticache.

2017-09-21  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/lint.c (add_predef_varname, check_called_files) Use
	g_slist_prepend instead of g_slist_append.
	(nasl_lint_defvar): Set GSLists to NULL after freeing. Fix case where
	a defined variables is global.
	(nasl_lint): Set GSLists to NULL after freeing.

2017-09-21  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/lint.c (nasl_lint_def, nasl_lint_call): Check if a function
	is associated to a filename before to set it.

2017-09-20  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/lint.c (nasl_lint_defvar): Add new GSList for local variables.
	Handle variables declared as local.

	* Changelog: Correct the format of the last entry.

2017-09-19  Juan Jose Nicola  <juan.nicola@greenbone.net>

	openvas-nasl-lint does not go deeper through a declared function
	if it is not called/used. If a not used function has unsatisfied
	dependencies, no errors will show.

	* nasl/lint.c (nasl_lint_def): Receive a new argument. Add a comment.
	Check if a declared function will be used, before to continue to going
	deeper in the tree.
	(nasl_lint_call): Receive a new argument. Check if a
	declared function will be used, before to continue to going deeper in
	the tree.
	(nasl_lint_defvar): Receive a new argument. Check if a
	declared function will be used, before to continue to going deeper in
	the tree.
	(make_call_func_list): New function. It adds to a list