@@ -1,5 +1,10 @@
 2017-09-25  Hani Benhabiles  <hani.benhabiles@greenbone.net>
 
+	* nasl/nasl_cert.c (build_hostname_list, get_name): Return NULL instead
+	of using g_assert().
+
+2017-09-25  Hani Benhabiles  <hani.benhabiles@greenbone.net>
+
 	* src/comm.c (send_plugins_preferences): Add function documentation.
 
 2017-09-24  Hani Benhabiles  <hani.benhabiles@greenbone.net>
